# KP

./: .gitignore
kp_326/kp_tasks/farm_association/server/: CMakeLists.txt  README.md
kp_326/kp_tasks/farm_association/server/cmake/: FarmLocalDependencies.cmake
kp_326/kp_tasks/farm_association/server/cmake/odb-local/: CMakeLists.txt
kp_326/kp_tasks/farm_association/server/docs/: module-spec.md
kp_326/kp_tasks/farm_association/server/include/controllers/app/: AssociationEmployee.hpp  AssociationFarms.hpp  AssociationMember.hpp  AssociationRole.hpp  Contract.hpp  EmployeePlotAssignment.hpp  EmploymentStatus.hpp  Farm.hpp  FarmAssociation.hpp  FarmEmployee.hpp  FarmEntityError.hpp  FarmOwner.hpp  FarmOwnership.hpp  FarmPlot.hpp  FarmPlotAssignment.hpp  FarmPlotConsumptionProduct.hpp  FarmPlotProductionProduct.hpp  FarmPlotType.hpp  FarmRole.hpp  IdentityDocumentType.hpp  Person.hpp  PersonDocument.hpp  Product.hpp  ProductType.hpp  PurchaseOrder.hpp  PurchaseOrderItem.hpp  PurchaseRequisition.hpp  SalesRequisition.hpp  Supplier.hpp  SupplierProductPrice.hpp  Unit.hpp  UserError.hpp  Users.hpp
kp_326/kp_tasks/farm_association/server/include/controllers/dto/: AssociationEmployee.hpp  AssociationFarms.hpp  AssociationMember.hpp  AssociationRole.hpp  Contract.hpp  EmployeePlotAssignment.hpp  EmploymentStatus.hpp  Farm.hpp  FarmAssociation.hpp  FarmEmployee.hpp  FarmOwner.hpp  FarmOwnership.hpp  FarmPlot.hpp  FarmPlotAssignment.hpp  FarmPlotConsumptionProduct.hpp  FarmPlotProductionProduct.hpp  FarmPlotType.hpp  FarmRole.hpp  IdentityDocumentType.hpp  (+12 more)
kp_326/kp_tasks/farm_association/server/include/core/: Error.hpp  Result.hpp
kp_326/kp_tasks/farm_association/server/include/database/: Bootstrap.hpp  Database.hpp  OdbTableRegistry.hpp  PgConnection.hpp  SqlValue.hpp
kp_326/kp_tasks/farm_association/server/include/domain/: Types.hpp
kp_326/kp_tasks/farm_association/server/include/handling/: AssociationEmployee.hpp  AssociationFarms.hpp  AssociationMember.hpp  AssociationRole.hpp  Contract.hpp  EmployeePlotAssignment.hpp  EmploymentStatus.hpp  Farm.hpp  FarmAssociation.hpp  FarmEmployee.hpp  FarmEntityRoutes.hpp  FarmOwner.hpp  FarmOwnership.hpp  FarmPlot.hpp  FarmPlotAssignment.hpp  FarmPlotConsumptionProduct.hpp  FarmPlotProductionProduct.hpp  FarmPlotType.hpp  FarmRole.hpp  Health.hpp  IdentityDocumentType.hpp  Person.hpp  PersonDocument.hpp  Product.hpp  ProductType.hpp  PurchaseOrder.hpp  PurchaseOrderItem.hpp  PurchaseRequisition.hpp  RequestParsing.hpp  SalesRequisition.hpp  Supplier.hpp  SupplierProductPrice.hpp  Unit.hpp  Users.hpp
kp_326/kp_tasks/farm_association/server/include/marshalling/: AssociationEmployee.hpp  AssociationFarms.hpp  AssociationMember.hpp  AssociationRole.hpp  Contract.hpp  EmployeePlotAssignment.hpp  EmploymentStatus.hpp  Farm.hpp  FarmAssociation.hpp  FarmEmployee.hpp  FarmOwner.hpp  FarmOwnership.hpp  FarmPlot.hpp  FarmPlotAssignment.hpp  FarmPlotConsumptionProduct.hpp  FarmPlotProductionProduct.hpp  FarmPlotType.hpp  FarmRole.hpp  IdentityDocumentType.hpp  Nullable.hpp  Person.hpp  PersonDocument.hpp  Product.hpp  ProductType.hpp  PurchaseOrder.hpp  PurchaseOrderItem.hpp  PurchaseRequisition.hpp  SalesRequisition.hpp  Supplier.hpp  SupplierProductPrice.hpp  Unit.hpp  User.hpp  user.hpp
kp_326/kp_tasks/farm_association/server/include/persistence/: AssociationEmployee.hpp  AssociationFarms.hpp  AssociationMember.hpp  AssociationRole.hpp  Contract.hpp  DomainValueTraits.hpp  EmployeePlotAssignment.hpp  EmploymentStatus.hpp  Farm.hpp  FarmAssociation.hpp  FarmEmployee.hpp  FarmOwner.hpp  FarmOwnership.hpp  FarmPlot.hpp  FarmPlotAssignment.hpp  FarmPlotConsumptionProduct.hpp  FarmPlotProductionProduct.hpp  FarmPlotType.hpp  FarmRole.hpp  IdentityDocumentType.hpp  Person.hpp  PersonDocument.hpp  Product.hpp  ProductType.hpp  PurchaseOrder.hpp  PurchaseOrderItem.hpp  PurchaseRequisition.hpp  SalesRequisition.hpp  Supplier.hpp  SupplierProductPrice.hpp  Unit.hpp  User.hpp  user.hpp
kp_326/kp_tasks/farm_association/server/include/security/: Encoding.hpp  JwtService.hpp  PasswordHasher.hpp
kp_326/kp_tasks/farm_association/server/include/views/: AssociationEmployee.hpp  AssociationFarms.hpp  AssociationMember.hpp  AssociationRole.hpp  Auth.hpp  Contract.hpp  EmployeePlotAssignment.hpp  EmploymentStatus.hpp  Error.hpp  Farm.hpp  FarmAssociation.hpp  FarmEmployee.hpp  FarmOwner.hpp  FarmOwnership.hpp  FarmPlot.hpp  FarmPlotAssignment.hpp  FarmPlotConsumptionProduct.hpp  FarmPlotProductionProduct.hpp  FarmPlotType.hpp  FarmRole.hpp  IdentityDocumentType.hpp  Person.hpp  PersonDocument.hpp  Product.hpp  ProductType.hpp  PurchaseOrder.hpp  PurchaseOrderItem.hpp  PurchaseRequisition.hpp  SalesRequisition.hpp  Supplier.hpp  SupplierProductPrice.hpp  Unit.hpp  User.hpp  user.hpp
kp_326/kp_tasks/farm_association/server/src/: Main.cpp  main.cpp
kp_326/kp_tasks/farm_association/server/src/database/: Bootstrap.cpp  Database.cpp  EntityAccess.cpp  OdbTableRegistry.cpp  PgConnection.cpp  TableRegistry.cpp  database.cpp
kp_326/kp_tasks/farm_association/server/src/handling/: AssociationEmployee.cpp  AssociationFarms.cpp  AssociationMember.cpp  AssociationRole.cpp  Contract.cpp  EmployeePlotAssignment.cpp  EmploymentStatus.cpp  Farm.cpp  FarmAssociation.cpp  FarmEmployee.cpp  FarmEntityRoutes.cpp  FarmOwner.cpp  FarmOwnership.cpp  FarmPlot.cpp  FarmPlotAssignment.cpp  FarmPlotConsumptionProduct.cpp  FarmPlotProductionProduct.cpp  FarmPlotType.cpp  FarmRole.cpp  Health.cpp  IdentityDocumentType.cpp  Person.cpp  PersonDocument.cpp  Product.cpp  ProductType.cpp  PurchaseOrder.cpp  PurchaseOrderItem.cpp  PurchaseRequisition.cpp  SalesRequisition.cpp  Supplier.cpp  SupplierProductPrice.cpp  Unit.cpp  Users.cpp
kp_326/kp_tasks/farm_association/server/src/security/: Encoding.cpp  JwtService.cpp  PasswordHasher.cpp
kp_326/kp_tasks/farm_association/server/tests/: CMakeLists.txt
kp_326/kp_tasks/farm_association/server/tests/fixtures/: BeastRequestFixture.hpp  HttpRequestFixture.hpp
kp_326/kp_tasks/farm_association/server/tests/utils/: JsonAssertions.hpp
(+201 files in other folders)
